--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -5,10 +5,11 @@
 
 Project:     MStone
 Version:     2.3.1
-
+newcode stuff
 ------------------------------------------------------------------
 [General Styles]
 */
+
 
 * {
     -webkit-font-smoothing: antialiased;
